// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders component 1`] = `
<a
  href="https://www.microsoft.com/en-us/p/windows-terminal-preview/9n0dx20hk701"
  rel="noopener noreferrer"
  target="_blank"
>
  Windows Terminal (Preview)
</a>
`;

exports[`renders component 2`] = `
<a
  href="https://github.com/mbadolato/iTerm2-Color-Schemes"
  rel="noopener noreferrer"
  target="_blank"
>
  iTerm2 Color Schemes
</a>
`;

exports[`renders component 3`] = `
<a
  href="undefined/colour-schemes.json"
  rel="noopener noreferrer"
  target="_blank"
>
  Download all the themes
</a>
`;

exports[`renders component 4`] = `
<a
  href="https://github.com/atomcorp/themes"
  rel="noopener noreferrer"
  target="_blank"
>
  Github page
</a>
`;
